--- a/Sword Fighting Game/.godot/editor/editor_layout.cfg
+++ b/Sword Fighting Game/.godot/editor/editor_layout.cfg
@@ -19,19 +19,19 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Player/Player.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://Scenes/", "res://Player/")
+dock_filesystem_selected_paths=PackedStringArray("res://Sprites/katana2.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/game.tscn")
-current_scene="res://Scenes/main.tscn"
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/game.tscn", "res://Player/Player.tscn")
+current_scene="res://Player/Player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
