--- a/Sword Fighting Game/.godot/editor/script_editor_cache.cfg
+++ b/Sword Fighting Game/.godot/editor/script_editor_cache.cfg
@@ -20,8 +20,12 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
-"scroll_position": 1.0,
-"selection": false,
+"row": 32,
+"scroll_position": 6.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 32,
+"selection_to_column": 0,
+"selection_to_line": 34,
 "syntax_highlighter": "GDScript"
 }
