--- a/Sword Fighting Game/.godot/editor/script_editor_cache.cfg
+++ b/Sword Fighting Game/.godot/editor/script_editor_cache.cfg
@@ -3,25 +3,15 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 5,
 "scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://src/Player.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 61,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 20,
-"scroll_position": 15.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 5,
+"selection_to_column": 0,
+"selection_to_line": 10,
 "syntax_highlighter": "GDScript"
 }
