--- a/Sword Fighting Game/.godot/editor/editor_layout.cfg
+++ b/Sword Fighting Game/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Sprites/katana spritesheet.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://Sprites/", "res://Scenes/", "res://actors/", "res://actors/Player/", "res://actors/FORK/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/game.tscn", "res://Player/Player.tscn")
-current_scene="res://Scenes/game.tscn"
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/game.tscn", "res://actors/FORK/FORK.tscn", "res://actors/Player/Player.tscn")
+current_scene="res://actors/Player/Player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,7 +36,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://src/main.gd", "res://src/Player.gd"]
+open_scripts=["res://src/FORK.gd", "res://src/main.gd", "res://src/Player.gd"]
 selected_script="res://src/Player.gd"
 open_help=[]
 script_split_offset=70
