--- a/Sword Fighting Game/.godot/editor/script_editor_cache.cfg
+++ b/Sword Fighting Game/.godot/editor/script_editor_cache.cfg
@@ -16,12 +16,26 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 61,
+"breakpoints": PackedInt32Array(24),
+"column": 44,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 15.0,
+"row": 33,
+"scroll_position": 24.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/FORK.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 23,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
