--- a/Sword Fighting Game/.godot/editor/editor_layout.cfg
+++ b/Sword Fighting Game/.godot/editor/editor_layout.cfg
@@ -32,13 +32,13 @@ current_scene="res://actors/Player/Player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://src/FORK.gd", "res://src/main.gd", "res://src/Player.gd"]
-selected_script="res://src/Player.gd"
-open_help=[]
+selected_script="res://src/FORK.gd"
+open_help=["@GlobalScope"]
 script_split_offset=70
 list_split_offset=0
 
