--- a/Sword Fighting Game/.godot/editor/editor_layout.cfg
+++ b/Sword Fighting Game/.godot/editor/editor_layout.cfg
@@ -27,18 +27,18 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/game.tscn", "res://actors/FORK/FORK.tscn", "res://actors/Player/Player.tscn")
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/game.tscn", "res://actors/Player/Player.tscn")
 current_scene="res://actors/Player/Player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://src/FORK.gd", "res://src/main.gd", "res://src/Player.gd"]
-selected_script="res://src/FORK.gd"
-open_help=["@GlobalScope"]
+selected_script="res://src/Player.gd"
+open_help=["@GlobalScope", "Vector2"]
 script_split_offset=70
 list_split_offset=0
 
