replace left click with space bar for fork activation

--- a/Sword Fighting Game/.godot/editor/editor_layout.cfg
+++ b/Sword Fighting Game/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://Sprites/", "res://Scenes/", "res://actors/", "res://actors/Player/", "res://actors/FORK/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -37,7 +37,7 @@ selected_bottom_panel_item=1
 [ScriptEditor]
 
 open_scripts=["res://src/FORK.gd", "res://src/main.gd", "res://src/Player.gd"]
-selected_script="res://src/FORK.gd"
+selected_script="res://src/Player.gd"
 open_help=["@GlobalScope"]
 script_split_offset=70
 list_split_offset=0
