made minimum distance between points to reduce lag

--- a/Sword Fighting Game/.godot/editor/project_metadata.cfg
+++ b/Sword Fighting Game/.godot/editor/project_metadata.cfg
@@ -35,3 +35,7 @@ project_settings=Rect2(-6, 112, 1920, 1057)
 [script_setup]
 
 last_selected_language="GDScript"
+
+[scripts_panel]
+
+show_scripts_panel=true
