--- a/Sword Fighting Game/.godot/editor/editor_layout.cfg
+++ b/Sword Fighting Game/.godot/editor/editor_layout.cfg
@@ -12,8 +12,8 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_2=230
+dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -29,14 +29,14 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/game.tscn", "res://actors/FORK/FORK.tscn", "res://actors/Player/Player.tscn")
 current_scene="res://Scenes/game.tscn"
-center_split_offset=0
-selected_default_debugger_tab_idx=0
+center_split_offset=-286
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://src/FORK.gd", "res://src/main.gd", "res://src/Player.gd", "res://src/ComboRecognition.gd"]
+open_scripts=["res://src/ComboRecognition.gd", "res://src/FORK.gd", "res://src/main.gd", "res://src/Player.gd"]
 selected_script="res://src/ComboRecognition.gd"
 open_help=["@GlobalScope"]
 script_split_offset=70
@@ -47,3 +47,13 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
+
+[editor_log]
+
+log_filter_0=false
+log_filter_2=false
+log_filter_1=false
+log_filter_3=false
+log_filter_4=false
+collapse=false
+show_search=true
